--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Wildcatz.pls - PulseChain Community</title>
   <style>
-    /* Reset */
     * {
       box-sizing: border-box;
     }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #121212;
+      background: linear-gradient(to bottom, #0f0f0f, #1b1b1b);
       color: #eee;
       margin: 0;
       padding: 0 1rem;
@@ -27,8 +26,7 @@
     header h1 {
       margin: 0;
       font-size: 2.5rem;
-      color: #61dafb;
-      cursor: default;
+      color: #00d0ff;
     }
     .section {
       margin-top: 1.5rem;
@@ -40,25 +38,23 @@
       cursor: pointer;
       padding: 0.5rem 0;
       outline: none;
-      list-style: none;
-      color: #61dafb;
-      user-select: none;
+      color: #00d0ff;
       transition: color 0.2s;
     }
     summary:hover {
-      color: #21a1f1;
+      color: #22aaff;
     }
     details[open] summary {
-      color: #21a1f1;
+      color: #22aaff;
     }
     .content {
       margin-top: 0.8rem;
       font-size: 1rem;
-      line-height: 1.5;
+      line-height: 1.6;
       color: #ccc;
     }
     a {
-      color: #61dafb;
+      color: #00d0ff;
       text-decoration: none;
     }
     a:hover {
@@ -85,6 +81,71 @@
 </header>
 
 <details class="section" open>
+  <summary>What Is PulseChain?</summary>
+  <div class="content">
+    PulseChain is a new blockchain network created by Richard Heart. It launched its mainnet on May 13, 2023. It’s a fork of Ethereum that offers cheaper fees, faster transactions, and a more eco-friendly proof-of-stake system.
+  </div>
+</details>
+
+<details class="section">
+  <summary>Why PulseChain Was Created</summary>
+  <div class="content">
+    PulseChain was designed to fix Ethereum's problems:
+    <ul>
+      <li>Lower gas fees</li>
+      <li>Faster transaction speed</li>
+      <li>More scalability</li>
+      <li>Mass adoption through free airdrops and community engagement</li>
+    </ul>
+  </div>
+</details>
+
+<details class="section">
+  <summary>How PulseChain Works</summary>
+  <div class="content">
+    PulseChain runs on proof-of-stake and has its own token called PLS. Every Ethereum wallet got a 1:1 copy of their tokens and NFTs on PulseChain. Its main DEX, PulseX, works like Uniswap. The ecosystem is designed to grow through utility, airdrops, and strong community involvement.
+  </div>
+</details>
+
+<details class="section">
+  <summary>How to Join PulseChain</summary>
+  <div class="content">
+    <ol>
+      <li>Install <a href="https://metamask.io" target="_blank">MetaMask</a></li>
+      <li>Add PulseChain Network:
+        <ul>
+          <li>Network: PulseChain</li>
+          <li>RPC: https://rpc.pulsechain.com</li>
+          <li>Chain ID: 369</li>
+          <li>Currency Symbol: PLS</li>
+        </ul>
+      </li>
+      <li>Bridge assets using <a href="https://bridge.pulsechain.com" target="_blank">PulseChain Bridge</a></li>
+      <li>Trade on <a href="https://pulsex.com" target="_blank">PulseX</a></li>
+    </ol>
+  </div>
+</details>
+
+<details class="section">
+  <summary>How to Build on PulseChain</summary>
+  <div class="content">
+    <strong>As a Developer:</strong>
+    <ul>
+      <li>Use Solidity to create smart contracts</li>
+      <li>Deploy using tools like Hardhat or Remix</li>
+      <li>Interact via RPC: https://rpc.pulsechain.com</li>
+    </ul>
+    <strong>As a Community Member:</strong>
+    <ul>
+      <li>Create content, host Twitter Spaces</li>
+      <li>Build regional communities</li>
+      <li>Run contests and giveaways</li>
+      <li>Help onboard new users</li>
+    </ul>
+  </div>
+</details>
+
+<details class="section">
   <summary>About Wildcatz.pls</summary>
   <div class="content">
     Wildcatz.pls is your go-to community for PulseChain insights, tools, and culture — created by Africa, for the world. We educate, connect, and empower users around the PulseChain ecosystem.
@@ -108,10 +169,10 @@
   <summary>Resources & Tools</summary>
   <div class="content">
     <ul>
-      <li><a href="https://wildcatzofweb3.vercel.app" target="_blank" rel="noopener">Wildcatz Portfolio Site</a></li>
-      <li><a href="https://t.me/wildcatzofweb3" target="_blank" rel="noopener">Wildcatz Telegram</a></li>
-      <li><a href="https://x.com/wildcatzofweb4?s=21" target="_blank" rel="noopener">Wildcatz on X (Twitter)</a></li>
-      <li><a href="https://discord.gg/GMtmHHqK" target="_blank" rel="noopener">Wildcatz Discord</a></li>
+      <li><a href="https://wildcatzofweb3.vercel.app" target="_blank">Wildcatz Portfolio Site</a></li>
+      <li><a href="https://t.me/wildcatzofweb3" target="_blank">Wildcatz Telegram</a></li>
+      <li><a href="https://x.com/wildcatzofweb4?s=21" target="_blank">Wildcatz on X</a></li>
+      <li><a href="https://discord.gg/GMtmHHqK" target="_blank">Wildcatz Discord</a></li>
     </ul>
   </div>
 </details>
@@ -120,10 +181,11 @@
   <summary>Connect With Us</summary>
   <div class="content">
     <ul class="social-links">
-      <li><a href="https://pulsechain.com" target="_blank" rel="noopener">Official PulseChain Website</a></li>
-      <li><a href="https://twitter.com/pulsechaincom" target="_blank" rel="noopener">PulseChain Twitter</a></li>
-      <li><a href="https://pulsex.exchange" target="_blank" rel="noopener">PulseX Decentralized Exchange</a></li>
+      <li><a href="https://pulsechain.com" target="_blank">Official PulseChain Website</a></li>
+      <li><a href="https://x.com/pulsechaincom" target="_blank">PulseChain Twitter</a></li>
+      <li><a href="https://pulsex.com" target="_blank">PulseX DEX</a></li>
     </ul>
+    <p>Compiled with love by <strong>Wildcatz</strong> | <a href="https://x.com/wildcatzofweb4?s=21" target="_blank">@wildcatzofweb4</a></p>
   </div>
 </details>
 
